lab3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    EQUALS

Grammar

Rule 0     S' -> program
Rule 1     program -> include_directive main_function
Rule 2     include_directive -> INCLUDE LESS ID GREATER
Rule 3     main_function -> INT MAIN LPAREN RPAREN LBRACE statements RBRACE
Rule 4     statements -> statement
Rule 5     statements -> statements statement
Rule 6     statement -> expression SEMICOLON
Rule 7     statement -> declaration SEMICOLON
Rule 8     statement -> return_statement SEMICOLON
Rule 9     declaration -> INT ID
Rule 10    expression -> COUT LESSLESS STRING LESSLESS ENDL
Rule 11    expression -> COUT LESSLESS ID LESSLESS ENDL
Rule 12    expression -> CIN GREATERGREATER ID
Rule 13    return_statement -> RETURN NUMBER

Terminals, with rules where they appear

CIN                  : 12
COUT                 : 10 11
ENDL                 : 10 11
EQUALS               : 
GREATER              : 2
GREATERGREATER       : 12
ID                   : 2 9 11 12
INCLUDE              : 2
INT                  : 3 9
LBRACE               : 3
LESS                 : 2
LESSLESS             : 10 10 11 11
LPAREN               : 3
MAIN                 : 3
NUMBER               : 13
RBRACE               : 3
RETURN               : 13
RPAREN               : 3
SEMICOLON            : 6 7 8
STRING               : 10
error                : 

Nonterminals, with rules where they appear

declaration          : 7
expression           : 6
include_directive    : 1
main_function        : 1
program              : 0
return_statement     : 8
statement            : 4 5
statements           : 3 5

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . include_directive main_function
    (2) include_directive -> . INCLUDE LESS ID GREATER

    INCLUDE         shift and go to state 3

    program                        shift and go to state 1
    include_directive              shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> include_directive . main_function
    (3) main_function -> . INT MAIN LPAREN RPAREN LBRACE statements RBRACE

    INT             shift and go to state 5

    main_function                  shift and go to state 4

state 3

    (2) include_directive -> INCLUDE . LESS ID GREATER

    LESS            shift and go to state 6


state 4

    (1) program -> include_directive main_function .

    $end            reduce using rule 1 (program -> include_directive main_function .)


state 5

    (3) main_function -> INT . MAIN LPAREN RPAREN LBRACE statements RBRACE

    MAIN            shift and go to state 7


state 6

    (2) include_directive -> INCLUDE LESS . ID GREATER

    ID              shift and go to state 8


state 7

    (3) main_function -> INT MAIN . LPAREN RPAREN LBRACE statements RBRACE

    LPAREN          shift and go to state 9


state 8

    (2) include_directive -> INCLUDE LESS ID . GREATER

    GREATER         shift and go to state 10


state 9

    (3) main_function -> INT MAIN LPAREN . RPAREN LBRACE statements RBRACE

    RPAREN          shift and go to state 11


state 10

    (2) include_directive -> INCLUDE LESS ID GREATER .

    INT             reduce using rule 2 (include_directive -> INCLUDE LESS ID GREATER .)


state 11

    (3) main_function -> INT MAIN LPAREN RPAREN . LBRACE statements RBRACE

    LBRACE          shift and go to state 12


state 12

    (3) main_function -> INT MAIN LPAREN RPAREN LBRACE . statements RBRACE
    (4) statements -> . statement
    (5) statements -> . statements statement
    (6) statement -> . expression SEMICOLON
    (7) statement -> . declaration SEMICOLON
    (8) statement -> . return_statement SEMICOLON
    (10) expression -> . COUT LESSLESS STRING LESSLESS ENDL
    (11) expression -> . COUT LESSLESS ID LESSLESS ENDL
    (12) expression -> . CIN GREATERGREATER ID
    (9) declaration -> . INT ID
    (13) return_statement -> . RETURN NUMBER

    COUT            shift and go to state 19
    CIN             shift and go to state 20
    INT             shift and go to state 13
    RETURN          shift and go to state 21

    statements                     shift and go to state 14
    statement                      shift and go to state 15
    expression                     shift and go to state 16
    declaration                    shift and go to state 17
    return_statement               shift and go to state 18

state 13

    (9) declaration -> INT . ID

    ID              shift and go to state 22


state 14

    (3) main_function -> INT MAIN LPAREN RPAREN LBRACE statements . RBRACE
    (5) statements -> statements . statement
    (6) statement -> . expression SEMICOLON
    (7) statement -> . declaration SEMICOLON
    (8) statement -> . return_statement SEMICOLON
    (10) expression -> . COUT LESSLESS STRING LESSLESS ENDL
    (11) expression -> . COUT LESSLESS ID LESSLESS ENDL
    (12) expression -> . CIN GREATERGREATER ID
    (9) declaration -> . INT ID
    (13) return_statement -> . RETURN NUMBER

    RBRACE          shift and go to state 23
    COUT            shift and go to state 19
    CIN             shift and go to state 20
    INT             shift and go to state 13
    RETURN          shift and go to state 21

    statement                      shift and go to state 24
    expression                     shift and go to state 16
    declaration                    shift and go to state 17
    return_statement               shift and go to state 18

state 15

    (4) statements -> statement .

    RBRACE          reduce using rule 4 (statements -> statement .)
    COUT            reduce using rule 4 (statements -> statement .)
    CIN             reduce using rule 4 (statements -> statement .)
    INT             reduce using rule 4 (statements -> statement .)
    RETURN          reduce using rule 4 (statements -> statement .)


state 16

    (6) statement -> expression . SEMICOLON

    SEMICOLON       shift and go to state 25


state 17

    (7) statement -> declaration . SEMICOLON

    SEMICOLON       shift and go to state 26


state 18

    (8) statement -> return_statement . SEMICOLON

    SEMICOLON       shift and go to state 27


state 19

    (10) expression -> COUT . LESSLESS STRING LESSLESS ENDL
    (11) expression -> COUT . LESSLESS ID LESSLESS ENDL

    LESSLESS        shift and go to state 28


state 20

    (12) expression -> CIN . GREATERGREATER ID

    GREATERGREATER  shift and go to state 29


state 21

    (13) return_statement -> RETURN . NUMBER

    NUMBER          shift and go to state 30


state 22

    (9) declaration -> INT ID .

    SEMICOLON       reduce using rule 9 (declaration -> INT ID .)


state 23

    (3) main_function -> INT MAIN LPAREN RPAREN LBRACE statements RBRACE .

    $end            reduce using rule 3 (main_function -> INT MAIN LPAREN RPAREN LBRACE statements RBRACE .)


state 24

    (5) statements -> statements statement .

    RBRACE          reduce using rule 5 (statements -> statements statement .)
    COUT            reduce using rule 5 (statements -> statements statement .)
    CIN             reduce using rule 5 (statements -> statements statement .)
    INT             reduce using rule 5 (statements -> statements statement .)
    RETURN          reduce using rule 5 (statements -> statements statement .)


state 25

    (6) statement -> expression SEMICOLON .

    RBRACE          reduce using rule 6 (statement -> expression SEMICOLON .)
    COUT            reduce using rule 6 (statement -> expression SEMICOLON .)
    CIN             reduce using rule 6 (statement -> expression SEMICOLON .)
    INT             reduce using rule 6 (statement -> expression SEMICOLON .)
    RETURN          reduce using rule 6 (statement -> expression SEMICOLON .)


state 26

    (7) statement -> declaration SEMICOLON .

    RBRACE          reduce using rule 7 (statement -> declaration SEMICOLON .)
    COUT            reduce using rule 7 (statement -> declaration SEMICOLON .)
    CIN             reduce using rule 7 (statement -> declaration SEMICOLON .)
    INT             reduce using rule 7 (statement -> declaration SEMICOLON .)
    RETURN          reduce using rule 7 (statement -> declaration SEMICOLON .)


state 27

    (8) statement -> return_statement SEMICOLON .

    RBRACE          reduce using rule 8 (statement -> return_statement SEMICOLON .)
    COUT            reduce using rule 8 (statement -> return_statement SEMICOLON .)
    CIN             reduce using rule 8 (statement -> return_statement SEMICOLON .)
    INT             reduce using rule 8 (statement -> return_statement SEMICOLON .)
    RETURN          reduce using rule 8 (statement -> return_statement SEMICOLON .)


state 28

    (10) expression -> COUT LESSLESS . STRING LESSLESS ENDL
    (11) expression -> COUT LESSLESS . ID LESSLESS ENDL

    STRING          shift and go to state 31
    ID              shift and go to state 32


state 29

    (12) expression -> CIN GREATERGREATER . ID

    ID              shift and go to state 33


state 30

    (13) return_statement -> RETURN NUMBER .

    SEMICOLON       reduce using rule 13 (return_statement -> RETURN NUMBER .)


state 31

    (10) expression -> COUT LESSLESS STRING . LESSLESS ENDL

    LESSLESS        shift and go to state 34


state 32

    (11) expression -> COUT LESSLESS ID . LESSLESS ENDL

    LESSLESS        shift and go to state 35


state 33

    (12) expression -> CIN GREATERGREATER ID .

    SEMICOLON       reduce using rule 12 (expression -> CIN GREATERGREATER ID .)


state 34

    (10) expression -> COUT LESSLESS STRING LESSLESS . ENDL

    ENDL            shift and go to state 36


state 35

    (11) expression -> COUT LESSLESS ID LESSLESS . ENDL

    ENDL            shift and go to state 37


state 36

    (10) expression -> COUT LESSLESS STRING LESSLESS ENDL .

    SEMICOLON       reduce using rule 10 (expression -> COUT LESSLESS STRING LESSLESS ENDL .)


state 37

    (11) expression -> COUT LESSLESS ID LESSLESS ENDL .

    SEMICOLON       reduce using rule 11 (expression -> COUT LESSLESS ID LESSLESS ENDL .)

